hphp/test/zend/good/Zend/tests/ns_077_4.php.expectf

Fatal error: Undefined constant 'foo\unknown' in %s/ns_077_4.php on line 4
